Fix scrollbars in search

--- a/components/common/DialogContent/index.scss
+++ b/components/common/DialogContent/index.scss
@@ -29,7 +29,7 @@
     height: auto;
     min-width: $unit * 48;
     // min-height: $unit-12x;
-    overflow-y: scroll;
+    overflow-y: auto;
     // height: 80vh;
     max-height: 80vh;
     min-width: 580px;
